--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 pydantic==2.4.2
-pydantic_core==2.10.1
+pydantic_core
 python-dotenv==1.0.0
 pytube==15.0.0
 redis==5.0.1
